# fastapi-microshop

./: .gitignore  README.md  alembic.ini  db.sqlite3  items_views.py  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0162eb7cc3f5_fix.py  6019c0d73132_initial_migration.py  76902d229df9_add_user.py  819d9d400b60_initial_migration.py  8333200b339d_add_user2.py  9b4a9fd4caf5_order_product.py  a3413b6b97c3_initial_migration.py  ad073e85fe91_add_post_table.py  b0c7deccf437_add_post_table.py  f954cc6b1832_create_profile_table.py  f9fe9b24c367_create_profile_table.py
api_v1/demo_auth/: demo_jwt_auth.py  router.py  utils.py
api_v1/orders/: router.py  schemas.py  service.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
api_v1/services/: base.py
auth/: utils_jwt.py
core/: config.py
core/models/: base.py  database.py  db_helper.py  mixins.py  models.py  post.py  product.py  profile.py  user.py
users/: crud.py  dependencies.py  schemas.py  views.py
